generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

// ─── Enums ─────────────────────────────────────────────────────────

enum UserStatus {
  active
  disabled
}

enum ProductStatus {
  active
  disabled
}

enum CartStatus {
  active
  converted
  abandoned
}

enum OrderStatus {
  pending
  paid
  processing
  shipped
  delivered
  cancelled
}

enum PaymentMethod {
  payment_link
  payment_intent
}

enum PaymentStatus {
  pending
  succeeded
  failed
  refunded
  cancelled
}

enum DiscountType {
  percentage
  fixed_amount
}

enum InventoryMovementType {
  sale
  restock
  adjustment
  cancellation
  refund
}

enum NotificationStatus {
  pending
  processing
  sent
  failed
}

// ─── Models ────────────────────────────────────────────────────────

model Role {
  id        Int      @id @default(autoincrement())
  name      String   @unique @db.VarChar(50)
  createdAt DateTime @default(now()) @map("created_at")
  users     User[]

  @@map("roles")
}

model User {
  id                Int      @id @default(autoincrement())
  roleId            Int      @map("role_id")
  email             String   @unique @db.VarChar(255)
  passwordHash      String   @map("password_hash") @db.VarChar(255)
  firstName         String   @map("first_name") @db.VarChar(100)
  lastName          String   @map("last_name") @db.VarChar(100)
  phone             String?  @db.VarChar(30)
  status            UserStatus @default(active)
  passwordChangedAt DateTime?  @map("password_changed_at")
  createdAt         DateTime @default(now()) @map("created_at")
  updatedAt         DateTime @default(now()) @updatedAt @map("updated_at")

  role                  Role                  @relation(fields: [roleId], references: [id])
  passwordResetTokens   PasswordResetToken[]
  productLikes          ProductLike[]
  carts                 Cart[]
  addresses             Address[]
  orders                Order[]               @relation("CustomerOrders")
  assignedDeliveries    Order[]               @relation("DeliveryOrders")
  statusChanges         OrderStatusHistory[]
  promoCodes            PromoCode[]
  promoRedemptions      PromoCodeRedemption[]
  inventoryMovements    InventoryMovement[]
  notifications         Notification[]

  @@index([roleId])
  @@index([status])
  @@map("users")
}

model PasswordResetToken {
  id        Int       @id @default(autoincrement())
  userId    Int       @map("user_id")
  tokenHash String    @unique @map("token_hash") @db.VarChar(255)
  expiresAt DateTime  @map("expires_at")
  usedAt    DateTime? @map("used_at")
  createdAt DateTime  @default(now()) @map("created_at")

  user User @relation(fields: [userId], references: [id])

  @@index([userId, expiresAt])
  @@map("password_reset_tokens")
}

model Category {
  id          Int      @id @default(autoincrement())
  name        String   @unique @db.VarChar(100)
  slug        String   @unique @db.VarChar(120)
  description String?  @db.Text
  createdAt   DateTime @default(now()) @map("created_at")
  updatedAt   DateTime @default(now()) @updatedAt @map("updated_at")
  products    Product[]

  @@map("categories")
}

model Product {
  id          Int           @id @default(autoincrement())
  categoryId  Int           @map("category_id")
  name        String        @db.VarChar(150)
  slug        String        @unique @db.VarChar(180)
  description String        @db.Text
  status      ProductStatus @default(active)
  createdAt   DateTime      @default(now()) @map("created_at")
  updatedAt   DateTime      @default(now()) @updatedAt @map("updated_at")
  deletedAt   DateTime?     @map("deleted_at")

  category      Category       @relation(fields: [categoryId], references: [id])
  images        ProductImage[]
  skus          ProductSku[]
  likes         ProductLike[]
  notifications Notification[]

  @@index([categoryId])
  @@index([status])
  @@index([categoryId, status])
  @@map("products")
}

model ProductImage {
  id         Int      @id @default(autoincrement())
  productId  Int      @map("product_id")
  storageKey String   @unique @map("storage_key") @db.VarChar(500)
  publicUrl  String   @map("public_url") @db.VarChar(1000)
  altText    String?  @map("alt_text") @db.VarChar(255)
  sortOrder  Int      @default(0) @map("sort_order")
  isPrimary  Boolean  @default(false) @map("is_primary")
  createdAt  DateTime @default(now()) @map("created_at")

  product Product @relation(fields: [productId], references: [id])

  @@index([productId, sortOrder])
  @@map("product_images")
}

model Size {
  id        Int          @id @default(autoincrement())
  name      String       @unique @db.VarChar(30)
  sortOrder Int          @default(0) @map("sort_order")
  skus      ProductSku[]

  @@map("sizes")
}

model Color {
  id      Int          @id @default(autoincrement())
  name    String       @unique @db.VarChar(50)
  hexCode String?      @map("hex_code") @db.VarChar(7)
  skus    ProductSku[]

  @@map("colors")
}

model ProductSku {
  id        Int      @id @default(autoincrement())
  productId Int      @map("product_id")
  sizeId    Int      @map("size_id")
  colorId   Int      @map("color_id")
  sku       String   @unique @db.VarChar(80)
  price     Decimal  @db.Decimal(12, 2)
  stock     Int      @default(0)
  isActive  Boolean  @default(true) @map("is_active")
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @default(now()) @updatedAt @map("updated_at")

  product            Product             @relation(fields: [productId], references: [id])
  size               Size                @relation(fields: [sizeId], references: [id])
  color              Color               @relation(fields: [colorId], references: [id])
  cartItems          CartItem[]
  orderItems         OrderItem[]
  inventoryMovements InventoryMovement[]
  notifications      Notification[]

  @@unique([productId, sizeId, colorId])
  @@index([productId, isActive])
  @@index([stock])
  @@map("product_skus")
}

model ProductLike {
  userId    Int      @map("user_id")
  productId Int      @map("product_id")
  createdAt DateTime @default(now()) @map("created_at")

  user    User    @relation(fields: [userId], references: [id])
  product Product @relation(fields: [productId], references: [id])

  @@id([userId, productId])
  @@index([productId])
  @@map("product_likes")
}

model Cart {
  id        Int        @id @default(autoincrement())
  userId    Int        @map("user_id")
  status    CartStatus @default(active)
  createdAt DateTime   @default(now()) @map("created_at")
  updatedAt DateTime   @default(now()) @updatedAt @map("updated_at")

  user   User       @relation(fields: [userId], references: [id])
  items  CartItem[]
  orders Order[]

  @@index([userId, status])
  @@map("carts")
}

model CartItem {
  id           Int      @id @default(autoincrement())
  cartId       Int      @map("cart_id")
  productSkuId Int      @map("product_sku_id")
  quantity     Int
  createdAt    DateTime @default(now()) @map("created_at")
  updatedAt    DateTime @default(now()) @updatedAt @map("updated_at")

  cart       Cart       @relation(fields: [cartId], references: [id])
  productSku ProductSku @relation(fields: [productSkuId], references: [id])

  @@unique([cartId, productSkuId])
  @@index([productSkuId])
  @@map("cart_items")
}

model Address {
  id             Int      @id @default(autoincrement())
  userId         Int      @map("user_id")
  label          String?  @db.VarChar(50)
  recipientName  String   @map("recipient_name") @db.VarChar(200)
  recipientPhone String   @map("recipient_phone") @db.VarChar(30)
  line1          String   @db.VarChar(255)
  line2          String?  @db.VarChar(255)
  city           String   @db.VarChar(100)
  stateRegion    String?  @map("state_region") @db.VarChar(100)
  postalCode     String?  @map("postal_code") @db.VarChar(20)
  countryCode    String   @map("country_code") @db.Char(2)
  isDefault      Boolean  @default(false) @map("is_default")
  createdAt      DateTime @default(now()) @map("created_at")
  updatedAt      DateTime @default(now()) @updatedAt @map("updated_at")

  user User @relation(fields: [userId], references: [id])

  @@index([userId])
  @@map("addresses")
}

model PromoCode {
  id                    Int          @id @default(autoincrement())
  code                  String       @unique @db.VarChar(50)
  discountType          DiscountType @map("discount_type")
  discountValue         Decimal      @map("discount_value") @db.Decimal(12, 2)
  expiresAt             DateTime     @map("expires_at")
  usageLimit            Int          @map("usage_limit")
  minimumPurchaseAmount Decimal?     @map("minimum_purchase_amount") @db.Decimal(12, 2)
  isActive              Boolean      @default(true) @map("is_active")
  createdByUserId       Int          @map("created_by_user_id")
  createdAt             DateTime     @default(now()) @map("created_at")
  updatedAt             DateTime     @default(now()) @updatedAt @map("updated_at")

  createdBy   User                  @relation(fields: [createdByUserId], references: [id])
  orders      Order[]
  redemptions PromoCodeRedemption[]

  @@map("promo_codes")
}

model Order {
  id                      Int         @id @default(autoincrement())
  orderNumber             String      @unique @map("order_number") @db.VarChar(40)
  userId                  Int         @map("user_id")
  sourceCartId            Int?        @map("source_cart_id")
  promoCodeId             Int?        @map("promo_code_id")
  assignedDeliveryUserId  Int?        @map("assigned_delivery_user_id")
  currentStatus           OrderStatus @default(pending) @map("current_status")
  currency                String      @default("USD") @db.Char(3)
  subtotal                Decimal     @db.Decimal(12, 2)
  discountAmount          Decimal     @default(0) @map("discount_amount") @db.Decimal(12, 2)
  totalAmount             Decimal     @map("total_amount") @db.Decimal(12, 2)

  // Address snapshot
  recipientName        String  @map("recipient_name") @db.VarChar(200)
  recipientPhone       String  @map("recipient_phone") @db.VarChar(30)
  shippingLine1        String  @map("shipping_line_1") @db.VarChar(255)
  shippingLine2        String? @map("shipping_line_2") @db.VarChar(255)
  shippingCity         String  @map("shipping_city") @db.VarChar(100)
  shippingStateRegion  String? @map("shipping_state_region") @db.VarChar(100)
  shippingPostalCode   String? @map("shipping_postal_code") @db.VarChar(20)
  shippingCountryCode  String  @map("shipping_country_code") @db.Char(2)

  createdAt   DateTime  @default(now()) @map("created_at")
  updatedAt   DateTime  @default(now()) @updatedAt @map("updated_at")
  cancelledAt DateTime? @map("cancelled_at")

  user             User                 @relation("CustomerOrders", fields: [userId], references: [id])
  sourceCart       Cart?                @relation(fields: [sourceCartId], references: [id])
  promoCode        PromoCode?           @relation(fields: [promoCodeId], references: [id])
  deliveryPerson   User?                @relation("DeliveryOrders", fields: [assignedDeliveryUserId], references: [id])
  items            OrderItem[]
  statusHistory    OrderStatusHistory[]
  payments         Payment[]
  inventoryMovements InventoryMovement[]
  promoRedemption  PromoCodeRedemption?

  @@index([userId, createdAt])
  @@index([userId, currentStatus, createdAt])
  @@index([userId, totalAmount])
  @@index([currentStatus, createdAt])
  @@index([assignedDeliveryUserId, currentStatus])
  @@index([promoCodeId])
  @@map("orders")
}

model OrderItem {
  id           Int     @id @default(autoincrement())
  orderId      Int     @map("order_id")
  productSkuId Int     @map("product_sku_id")
  productName  String  @map("product_name") @db.VarChar(150)
  skuCode      String  @map("sku_code") @db.VarChar(80)
  sizeName     String  @map("size_name") @db.VarChar(30)
  colorName    String  @map("color_name") @db.VarChar(50)
  imageUrl     String? @map("image_url") @db.VarChar(1000)
  quantity     Int
  unitPrice    Decimal @map("unit_price") @db.Decimal(12, 2)
  lineTotal    Decimal @map("line_total") @db.Decimal(12, 2)

  order      Order      @relation(fields: [orderId], references: [id])
  productSku ProductSku @relation(fields: [productSkuId], references: [id])

  @@unique([orderId, productSkuId])
  @@index([productSkuId])
  @@map("order_items")
}

model OrderStatusHistory {
  id              Int          @id @default(autoincrement())
  orderId         Int          @map("order_id")
  fromStatus      OrderStatus? @map("from_status")
  toStatus        OrderStatus  @map("to_status")
  changedByUserId Int?         @map("changed_by_user_id")
  reason          String?      @db.VarChar(500)
  createdAt       DateTime     @default(now()) @map("created_at")

  order     Order @relation(fields: [orderId], references: [id])
  changedBy User? @relation(fields: [changedByUserId], references: [id])

  @@index([orderId, createdAt])
  @@map("order_status_history")
}

model Payment {
  id                    Int           @id @default(autoincrement())
  orderId               Int           @map("order_id")
  method                PaymentMethod
  status                PaymentStatus @default(pending)
  provider              String        @default("stripe") @db.VarChar(30)
  providerPaymentId     String?       @unique @map("provider_payment_id") @db.VarChar(255)
  providerPaymentLinkId String?       @map("provider_payment_link_id") @db.VarChar(255)
  currency              String        @db.Char(3)
  amount                Decimal       @db.Decimal(12, 2)
  paidAt                DateTime?     @map("paid_at")
  createdAt             DateTime      @default(now()) @map("created_at")
  updatedAt             DateTime      @default(now()) @updatedAt @map("updated_at")

  order Order @relation(fields: [orderId], references: [id])

  @@index([orderId])
  @@index([status, createdAt])
  @@map("payments")
}

model StripeWebhookEvent {
  id             Int       @id @default(autoincrement())
  stripeEventId  String    @unique @map("stripe_event_id") @db.VarChar(255)
  eventType      String    @map("event_type") @db.VarChar(100)
  payload        Json
  processedAt    DateTime? @map("processed_at")
  errorMessage   String?   @map("error_message") @db.Text
  createdAt      DateTime  @default(now()) @map("created_at")

  @@index([eventType, createdAt])
  @@map("stripe_webhook_events")
}

model InventoryMovement {
  id              Int                   @id @default(autoincrement())
  productSkuId    Int                   @map("product_sku_id")
  orderId         Int?                  @map("order_id")
  movementType    InventoryMovementType @map("movement_type")
  quantityChange  Int                   @map("quantity_change")
  stockAfter      Int                   @map("stock_after")
  createdByUserId Int?                  @map("created_by_user_id")
  createdAt       DateTime              @default(now()) @map("created_at")

  productSku ProductSku @relation(fields: [productSkuId], references: [id])
  order      Order?     @relation(fields: [orderId], references: [id])
  createdBy  User?      @relation(fields: [createdByUserId], references: [id])

  @@index([productSkuId, createdAt])
  @@index([orderId])
  @@map("inventory_movements")
}

model PromoCodeRedemption {
  id             Int      @id @default(autoincrement())
  promoCodeId    Int      @map("promo_code_id")
  userId         Int      @map("user_id")
  orderId        Int      @unique @map("order_id")
  discountAmount Decimal  @map("discount_amount") @db.Decimal(12, 2)
  redeemedAt     DateTime @default(now()) @map("redeemed_at")

  promoCode PromoCode @relation(fields: [promoCodeId], references: [id])
  user      User      @relation(fields: [userId], references: [id])
  order     Order     @relation(fields: [orderId], references: [id])

  @@index([promoCodeId, redeemedAt])
  @@index([userId, redeemedAt])
  @@map("promo_code_redemptions")
}

model Notification {
  id             Int                @id @default(autoincrement())
  userId         Int                @map("user_id")
  productId      Int?               @map("product_id")
  productSkuId   Int?               @map("product_sku_id")
  type           String             @db.VarChar(60)
  recipientEmail String             @map("recipient_email") @db.VarChar(255)
  status         NotificationStatus @default(pending)
  attempts       Int                @default(0)
  sentAt         DateTime?          @map("sent_at")
  lastError      String?            @map("last_error") @db.Text
  createdAt      DateTime           @default(now()) @map("created_at")

  user       User        @relation(fields: [userId], references: [id])
  product    Product?    @relation(fields: [productId], references: [id])
  productSku ProductSku? @relation(fields: [productSkuId], references: [id])

  @@index([status, createdAt])
  @@index([userId, type, createdAt])
  @@index([productSkuId, type])
  @@map("notifications")
}
