// T-Shirt Store - Week 1 ERD
// Import directly into https://dbdiagram.io

Enum user_status {
  active
  disabled
}

Enum product_status {
  active
  disabled
}

Enum cart_status {
  active
  converted
  abandoned
}

Enum order_status {
  pending
  paid
  processing
  shipped
  delivered
  cancelled
}

Enum payment_method {
  payment_link
  payment_intent
}

Enum payment_status {
  pending
  succeeded
  failed
  refunded
  cancelled
}

Enum discount_type {
  percentage
  fixed_amount
}

Enum inventory_movement_type {
  sale
  restock
  adjustment
  cancellation
  refund
}

Enum notification_type {
  low_stock
  password_changed
}

Enum notification_status {
  pending
  processing
  sent
  failed
}

Enum currency_code {
  USD
}

Enum country_code {
  PE
  US
}

Table roles {
  id bigint [pk, increment]
  name varchar(50) [not null, unique, note: 'manager, client, delivery_person']
  created_at timestamp [not null, default: `now()`]
}

Table order_status_transitions {
  id bigint [pk, increment]
  order_status order_status [not null]
  allowed_role_id bigint [not null, ref: > roles.id]

  indexes {
    (order_status, allowed_role_id) [unique]
  }
}

Table users {
  id bigint [pk, increment]
  role_id bigint [not null, ref: > roles.id]
  email varchar(255) [not null, unique]
  password_hash varchar(255) [not null]
  first_name varchar(100) [not null]
  last_name varchar(100) [not null]
  phone varchar(30)
  user_status user_status [not null, default: 'active']
  password_changed_at timestamp
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  indexes {
    role_id
    user_status
  }
}

Table password_reset_tokens {
  id bigint [pk, increment]
  user_id bigint [not null, ref: > users.id]
  token_hash varchar(255) [not null, unique]
  expires_at timestamp [not null]
  used_at timestamp
  created_at timestamp [not null, default: `now()`]

  indexes {
    (user_id, expires_at)
  }
}

Table categories {
  id bigint [pk, increment]
  name varchar(100) [not null, unique]
  slug varchar(120) [not null, unique]
  description text
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table products {
  id bigint [pk, increment]
  category_id bigint [not null, ref: > categories.id]
  name varchar(150) [not null]
  slug varchar(180) [not null, unique]
  description text [not null]
  product_status product_status [not null, default: 'active']
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
  deleted_at timestamp [note: 'Soft delete preserves order references']

  indexes {
    category_id
    product_status
    (category_id, product_status)
  }
}

Table product_images {
  id bigint [pk, increment]
  product_id bigint [not null, ref: > products.id]
  storage_key varchar(500) [not null, unique, note: 'AWS S3 object key']
  public_url varchar(1000) [not null]
  alt_text varchar(255)
  sort_order int [not null, default: 0]
  is_primary boolean [not null, default: false]
  created_at timestamp [not null, default: `now()`]

  indexes {
    (product_id, sort_order)
  }
}

Table sizes {
  id bigint [pk, increment]
  name varchar(30) [not null, unique, note: 'Example: S, M, L, XL']
  sort_order int [not null, default: 0]
}

Table colors {
  id bigint [pk, increment]
  name varchar(50) [not null, unique]
  hex_code varchar(7)
}

Table product_variants {
  id bigint [pk, increment]
  product_id bigint [not null, ref: > products.id]
  size_id bigint [not null, ref: > sizes.id]
  color_id bigint [not null, ref: > colors.id]
  sku varchar(80) [not null, unique]
  price decimal(12,2) [not null, note: 'CHECK price >= 0']
  stock int [not null, default: 0, note: 'CHECK stock >= 0']
  is_active boolean [not null, default: true]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  indexes {
    (product_id, size_id, color_id) [unique]
    (product_id, is_active)
    stock
  }
}

Table product_likes {
  user_id bigint [not null, ref: > users.id]
  product_id bigint [not null, ref: > products.id]
  created_at timestamp [not null, default: `now()`]

  indexes {
    (user_id, product_id) [pk]
    product_id
  }
}

Table carts {
  id bigint [pk, increment]
  user_id bigint [not null, unique, ref: > users.id]
  cart_status cart_status [not null, default: 'active']
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  indexes {
    cart_status
  }
}

Table cart_items {
  id bigint [pk, increment]
  cart_id bigint [not null, ref: > carts.id]
  product_variant_id bigint [not null, ref: > product_variants.id]
  quantity int [not null, note: 'CHECK quantity > 0']
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  indexes {
    (cart_id, product_variant_id) [unique]
    product_variant_id
  }
}

Table addresses {
  id bigint [pk, increment]
  user_id bigint [not null, ref: > users.id]
  label varchar(50)
  recipient_name varchar(200) [not null]
  recipient_phone varchar(30) [not null]
  line_1 varchar(255) [not null]
  line_2 varchar(255)
  city varchar(100) [not null]
  state_region varchar(100)
  postal_code varchar(20)
  country country_code [not null]
  is_default boolean [not null, default: false]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  indexes {
    user_id
  }
}

Table promo_codes {
  id bigint [pk, increment]
  code varchar(50) [not null, unique]
  discount_type discount_type [not null]
  discount_value decimal(12,2) [not null, note: 'CHECK discount_value > 0; percentage <= 100']
  starts_at timestamp
  expires_at timestamp [not null]
  usage_limit int [not null, note: 'CHECK usage_limit > 0']
  minimum_purchase_amount decimal(12,2) [note: 'CHECK minimum_purchase_amount >= 0']
  is_active boolean [not null, default: true]
  created_by_user_id bigint [not null, ref: > users.id]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table orders {
  id bigint [pk, increment]
  order_number varchar(40) [not null, unique]
  user_id bigint [not null, ref: > users.id]
  source_cart_id bigint [ref: > carts.id]
  promo_code_id bigint [ref: > promo_codes.id]
  assigned_delivery_user_id bigint [ref: > users.id]
  order_status order_status [not null, default: 'pending']
  currency currency_code [not null, default: 'USD']
  subtotal decimal(12,2) [not null, note: 'CHECK subtotal >= 0']
  discount_amount decimal(12,2) [not null, default: 0, note: 'CHECK discount_amount >= 0']
  total_amount decimal(12,2) [not null, note: 'CHECK total_amount >= 0']

  // Delivery address snapshot
  recipient_name varchar(200) [not null]
  recipient_phone varchar(30) [not null]
  shipping_line_1 varchar(255) [not null]
  shipping_line_2 varchar(255)
  shipping_city varchar(100) [not null]
  shipping_state_region varchar(100)
  shipping_postal_code varchar(20)
  shipping_country country_code [not null]

  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
  cancelled_at timestamp

  indexes {
    (user_id, created_at)
    (user_id, order_status, created_at)
    (user_id, total_amount)
    (order_status, created_at)
    (assigned_delivery_user_id, order_status)
    promo_code_id
  }
}

Table order_items {
  id bigint [pk, increment]
  order_id bigint [not null, ref: > orders.id]
  product_variant_id bigint [not null, ref: > product_variants.id]
  product_name varchar(150) [not null]
  sku_code varchar(80) [not null]
  size_name varchar(30) [not null]
  color_name varchar(50) [not null]
  image_url varchar(1000)
  quantity int [not null, note: 'CHECK quantity > 0']
  unit_price decimal(12,2) [not null, note: 'CHECK unit_price >= 0']
  line_total decimal(12,2) [not null, note: 'CHECK line_total = quantity * unit_price']
  created_at timestamp [not null, default: `now()`]

  indexes {
    (order_id, product_variant_id) [unique]
    product_variant_id
  }
}

Table payments {
  id bigint [pk, increment]
  order_id bigint [not null, ref: > orders.id]
  payment_method payment_method [not null]
  payment_status payment_status [not null, default: 'pending']
  provider varchar(30) [not null, default: 'stripe']
  provider_payment_reference varchar(255) [unique]
  currency currency_code [not null, default: 'USD']
  amount decimal(12,2) [not null, note: 'CHECK amount >= 0']
  paid_at timestamp
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  indexes {
    order_id
    payment_method
    (payment_status, created_at)
  }
}

Table stripe_webhook_events {
  id bigint [pk, increment]
  stripe_event_id varchar(255) [not null, unique]
  event_type varchar(100) [not null]
  payload json [not null]
  processed_at timestamp
  error_message text
  created_at timestamp [not null, default: `now()`]

  indexes {
    (event_type, created_at)
  }
}

Table order_status_history {
  id bigint [pk, increment]
  order_id bigint [not null, ref: > orders.id]
  order_status order_status [not null]
  changed_by_user_id bigint [ref: > users.id, note: 'Null when changed by Stripe/system']
  reason varchar(500)
  created_at timestamp [not null, default: `now()`]

  indexes {
    (order_id, created_at)
  }
}

Table inventory_movements {
  id bigint [pk, increment]
  product_variant_id bigint [not null, ref: > product_variants.id]
  order_id bigint [ref: > orders.id]
  movement_type inventory_movement_type [not null]
  quantity_change int [not null, note: 'Negative for stock reduction, positive for stock increase; CHECK <> 0']
  stock_after int [not null, note: 'CHECK stock_after >= 0']
  created_by_user_id bigint [ref: > users.id]
  created_at timestamp [not null, default: `now()`]

  indexes {
    (product_variant_id, created_at)
    order_id
  }
}

Table notifications {
  id bigint [pk, increment]
  user_id bigint [not null, ref: > users.id]
  product_id bigint [ref: > products.id]
  product_variant_id bigint [ref: > product_variants.id]
  notification_type notification_type [not null]
  recipient_email varchar(255) [not null]
  notification_status notification_status [not null, default: 'pending']
  attempts int [not null, default: 0]
  sent_at timestamp
  last_error text
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  indexes {
    (notification_status, created_at)
    (user_id, notification_type, created_at)
    (product_variant_id, notification_type)
  }
}

// PostgreSQL constraints to add in the SQL migration/Prisma schema:
// 1. One cart per user is enforced by carts.user_id unique.
// 2. Only one primary image per product: partial unique index WHERE is_primary = true.
// 3. Validate legal order status updates using order_status_transitions.
// 4. assigned_delivery_user_id must reference a user with delivery_person role.
// 5. Stock reduction, payment update, order status and inventory movement must be atomic.
